--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage.html
@@ -7,6 +7,8 @@
 
     <div wicket:id="FinanceAccountsPage.postingsModal"></div>
 
+    <a href="#" wicket:id="export">LINK</a><br>
+
     <form wicket:id="FinanceAccountsPage.filters">
 
         <table class="table">
