--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.html
@@ -51,15 +51,23 @@
                 <td colspan="4"><br></td>
             </tr>
             <tr>
-                <td colspan="4">
+                <td colspan="3">
                     <input wicket:id="refresh" class="btn btn-success" type="submit" value="save"/>
+                </td>
+                <td style="text-align: right">
+                    <a href="#" class="btn" wicket:id="exportPdf">
+                        <wicket:message key="button.pdf"></wicket:message>
+                    </a>
+                    <a href="#" class="btn" wicket:id="exportXls">
+                        <wicket:message key="button.xls"></wicket:message>
+                    </a>
                 </td>
             </tr>
         </table>
 
     </form>
 
-    <table class="table table-condensed table-bordered" cellspacing="0" wicket:id="balanceDataTable">[table]</table>
+    <div wicket:id="BalancePage.balance"></div>
 
 </wicket:extend>
 
