--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage.html
@@ -60,8 +60,13 @@
                     <input wicket:id="refresh" class="btn btn-success" type="submit" value="save"/>
                 </td>
                 <td style="text-align: right">
-                    <a href="#" class="btn" wicket:id="exportPdf"><i class="icon-download"></i></a>
-                    <a href="#" class="btn" wicket:id="exportXls"><i class="icon-download"></i></a>
+
+                    <a href="#" class="btn" wicket:id="exportPdf">
+                        <wicket:message key="button.pdf"></wicket:message>
+                    </a>
+                    <a href="#" class="btn" wicket:id="exportXls">
+                        <wicket:message key="button.xls"></wicket:message>
+                    </a>
                 </td>
             </tr>
         </table>
