#39 Is it possible to change account types when in use?

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
@@ -35,7 +35,9 @@
                 </td>
             </tr>
             <tr>
-                <td colspan="2"></td>
+                <td colspan="2">
+                    <span wicket:id="lockedInfo"></span>
+                </td>
                 <td>
                     <wicket:message key="ChartOfAccountsPage.locked"></wicket:message>
                 </td>
