#69 Modal confirmation for creating legal entity

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
@@ -18,6 +18,9 @@
     <div class="row">
         <div class="span9">
             <form wicket:id="financePostingEdit" class="form-inline">
+                <div wicket:id="saveModalConfirm"></div>
+                <div wicket:id="newModalConfirm"></div>
+                <div wicket:id="deleteModalConfirm"></div>
 
                 <table class="table table-condensed">
                     <tr>
