--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
@@ -7,7 +7,9 @@
 
     <form wicket:id="financeAccountEdit" class="form-inline">
 
-
+        <div wicket:id="saveModalConfirm"></div>
+        <div wicket:id="newModalConfirm"></div>
+        <div wicket:id="deleteModalConfirm"></div>
         <table class="table">
             <tr>
                 <th>
