--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.html
@@ -8,7 +8,9 @@
 
 
     <form wicket:id="dailyLedgerEdit" class="form-horizontal">
-
+        <div wicket:id="saveModalConfirm"></div>
+        <div wicket:id="newModalConfirm"></div>
+        <div wicket:id="deleteModalConfirm"></div>
         <div class="control-group">
             <label class="control-label" for="name">
                 <wicket:message key="DailyLedgerPage.name"></wicket:message>
