--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.html
@@ -6,7 +6,9 @@
 <wicket:extend>
 
     <form wicket:id="vatTypeEdit" class="form-inline">
-
+        <div wicket:id="saveModalConfirm"></div>
+        <div wicket:id="newModalConfirm"></div>
+        <div wicket:id="deleteModalConfirm"></div>
         <table class="table">
             <tr>
                 <th>
