#61 Export daily ledger settings

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.html
@@ -46,7 +46,13 @@
                 <input wicket:id="save" class="btn btn-success" type="submit" value="save"/>
                 <input wicket:id="new" class="btn btn-info" type="submit" value="new"/>
                 <input wicket:id="delete" class="btn btn-danger" type="submit" value="delete"/>
-
+                <a href="#" class="btn" style="visibility: hidden">Invi</a>
+                <a href="#" class="btn" wicket:id="exportPdf">
+                    <wicket:message key="button.pdf"></wicket:message>
+                </a>
+                <a href="#" class="btn" wicket:id="exportXls">
+                    <wicket:message key="button.xls"></wicket:message>
+                </a>
             </div>
         </div>
 
