--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
@@ -68,10 +68,18 @@
                     </tr>
 
                     <tr>
-                        <td colspan="4">
+                        <td colspan="3">
                             <input wicket:id="save" class="btn btn-success" type="submit" value="save"/>
                             <input wicket:id="new" class="btn btn-info" type="submit" value="new"/>
                             <input wicket:id="delete" class="btn btn-danger" type="submit" value="delete"/>
+                        </td>
+                        <td style="text-align: right">
+                            <a href="#" class="btn" wicket:id="exportPdf">
+                                <wicket:message key="button.pdf"></wicket:message>
+                            </a>
+                            <a href="#" class="btn" wicket:id="exportXls">
+                                <wicket:message key="button.xls"></wicket:message>
+                            </a>
                         </td>
                     </tr>
                 </table>
