#20 Import finance accounts

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
@@ -76,6 +76,11 @@
 
         </table>
     </form>
+    <div wicket:id="importWizard" style="overflow: scroll"></div>
+    <a href="#" class="btn" wicket:id="importWizardLink">
+        <wicket:message key="button.import.finance.accounts"></wicket:message>
+    </a>
+    <br><br>
 
     <table class="table table-condensed table-bordered" cellspacing="0" wicket:id="chartOfAccounts">[table]</table>
 
